[CSDEVFEG-966] Fixed menu appearing below logo at mid-range breakpoints (occured on Safari).

--- a/components/features/global/Header/default.scss
+++ b/components/features/global/Header/default.scss
@@ -127,6 +127,7 @@
 
             @media (min-width: 768px) and (max-width: 902px) {
               padding: 15px 5px;
+              font-size: 10px;
             }
           }
         }
